--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 group = 'me.improper'
-version = '1.2-BETA'
+version = '1.2.1-BETA'
 
 repositories {
     mavenCentral()
@@ -44,4 +44,10 @@ processResources {
     filesMatching('plugin.yml') {
         expand props
     }
+}
+
+compileJava.options.encoding("UTF-8")
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
