--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -32,3 +32,7 @@ commands:
     description: Pause all modules in your profile
     usage: /#pause
     permission: combatutils.modules
+  "#perm":
+    description: Grants or revokes a player's permission to use custom chat commands
+    usage: /#perm <action> <player>
+    permission: combatutils.commands
